--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@paperflite-marketing/utils",
-  "version": "1.6.0",
+  "version": "1.6.0-win",
   "description": "utils for daybrush",
   "main": "dist/utils.js",
   "module": "dist/utils.esm.js",
@@ -41,10 +41,10 @@
     "coverage": "karma start --coverage && print-coveralls --sort=desc",
     "test": "karma start",
     "build": "npm run build:rollup && npm run declaration",
-    "declaration": "rm -rf declaration && tsc -p tsconfig.declaration.json",
+    "declaration": "deltree declaration && tsc -p tsconfig.declaration.json",
     "build:rollup": "rollup -c",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "doc": "rm -rf ./doc && jsdoc -c jsdoc.json",
+    "doc": "deltree ./doc && jsdoc -c jsdoc.json",
     "release": "npm run build && npm run doc && release --dirs=dist,doc",
     "prepare": "yarn build || npm run build"
   },
