--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@paperflite-marketing/utils",
-  "version": "1.6.0-win",
+  "version": "1.6.0-win-1",
   "description": "utils for daybrush",
   "main": "dist/utils.js",
   "module": "dist/utils.esm.js",
