--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"noImplicitAny": true,
 		"module": "es2015",
 		"target": "es5",
-		"declaration": true,
+		"declaration": false,
 		"declarationDir": "./declaration",
 		"experimentalDecorators": true,
 		"noUnusedLocals": true,
